Fix #puzzle overflowing

--- a/src/styles/ai-security.css
+++ b/src/styles/ai-security.css
@@ -45,7 +45,7 @@ h1 {
     padding: 20px;
     float: left;
     margin: 30px 20px;
-    width: 500px;
+    width: 510px;
 }
 
 #puzzle div {
